2006-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/asm_strings.s,
	* device/lib/gbz80/crt0_rle.s,
	* device/lib/gbz80/div.s,
	* device/lib/gbz80/mul.s,
	* device/lib/gbz80/shift.s,
	* device/lib/z80/asm_strings.s,
	* device/lib/z80/crt0_rle.s,
	* device/lib/z80/div.s,
	* device/lib/z80/mul.s,
	* device/lib/z80/shift.s: changed to all lower case menmonics except the
	  flags which are all upper case

2006-08-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/asm.h: made CASE_SENSITIVE 1
	* link/z80/aslink.h: made CASE_SENSITIVE 1
	* src/z80/gen.c (throughout): made all conditionals upper case
	* support/regression/tests/bug1503067.c: new

2006-08-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (aopPut): fixed bug !*ixy should be !*iyx,
	  (shiftIntoPair): added case 2 for PAIR_IY,
	  (setupToPreserveCarry): replaced parameters with iCode and check if
	   PAIR_DE is in use to fix bug 1399290,
	  (genPlus, genMinus): updated call to setupToPreserveCarry
	* support/regression/tests/bug1399290.c: new

2006-08-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/Makefile.in (Z80SOURCES): enabled float support
	* sim/ucsim/z80.src/inst.cc (inst_rst): generate breakpoint on RST8,ACC==0
	* src/ds390/gen.c (shiftRLong),
	* src/hc08/gen.c (shiftLLong, shiftRLong): fixed bug 1533966
	* src/mcs51/gen.c (sameReg): changed to sameByte,
	  (xch_a_aopGet): new,
	  (shiftL2Left2Result, shiftR2Left2Result, shiftRLeftOrResult, shiftLLong,
	   shiftRLong): fixed bug 1533966
	* src/z80/gen.c (shiftR2Left2Result, shiftL2Left2Result, genlshTwo,
	  genLeftShiftLiteral, genrshTwo, genRightShiftLiteral): fixed bug 1533966
	* support/regression/Makefile.in: disabled z80, enabled ucz80
	* support/regression/tests/float_trans.c: enabled test for z80 and host
	* support/regression/tests/shifts2.c: new, for testing bug 1533966

2006-08-01 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/gen.c, src/dc390/gen.c: fixed warning: